--- a/teste.html
+++ b/teste.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <section src="./main.js"></script>
+    <title>Cores</title>
 </head>
 <body>
     <div class="container">
